tests/cases/scc/error/0029-eof.c
//!necc-dbg @ -as

int
main(
